--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:IqqWYWmKzYk8G56gTW+6LBWFpSF0kq/clZRTNuUZRIQ=
 APP_DEBUG=true
-APP_URL=https://localhost
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
